--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.5",
     "react-bootstrap": "^1.0.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.20",
     "react-redux": "^7.2.0",
