--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://peter01twn.github.io/pomodoro",
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@hot-loader/react-dom": "^16.13.0",
@@ -35,7 +36,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
