--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://peter01twn.github.io/pomodoro",
+  "homepage": "https://peter01twn.github.io/pomodoro",
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@hot-loader/react-dom": "^16.13.0",
@@ -17,6 +17,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
