--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-zoom": "^0.7.5",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -18,6 +20,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "gh-pages": "^2.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
